# OpenEngine

./: .env.example  .gitignore  README.md  app_types.py  conftest.py  crawl.py  crawler.py  deploy.py  deploy_dev.py  dockerfile  entrypoint.sh  gather.py  init-postgres.sh  main.py  process.py  pyproject.toml  redeploy_containers.py  search.py  setup.py  setup_postgres.py  storage.py  test_crawl.py  test_crawler.py  test_gather.py  test_process.py  test_search.py  test_storage.py  test_utility.py  testing_techniques.ipynb  utility.py
app/: main.py
app/auth/: auth.py
app/core/: crawl.py  gather.py  process.py  search.py  storage.py  utility.py
app/models/: data_types.py
frontend/svelte-app/: package-lock.json  package.json  tsconfig.json
frontend/svelte-app/src/lib/: types.d.ts
frontend/svelte-app/src/lib/components/: AdminTopNav.svelte  Button.svelte  InputBox.svelte  (+9 more)
frontend/svelte-app/src/routes/: +layout.svelte  +page.svelte
frontend/svelte-app/static/: env.json
nginx/: nginx.conf
notebooks/: testing_api.ipynb  testing_techniques.ipynb
test_data/: cleanable_urls.joblib
test_data/search_data/: qdrant_vectors.joblib
test_data/search_engine/: postgres_meta.joblib
test_data/simple_site/: page2.html  page3.html  page4.html  page5.html  page6.html  page8.html
tests/app_tests/: conftest.py  test_auth.py  test_crawl.py  test_gather.py  test_main.py  test_process.py  test_search.py  test_storage.py  test_utility.py
tests/app_tests/test_data/: html_page.joblib
tests/app_tests/test_data/simple_site/: page1.html  page10.html  page7.html  page9.html
(+4 files in other folders)
