[tool.poetry]
name = "openengine"
version = "0.1.0"
description = ""
authors = ["Connor Skelland <34070858+Connor56@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
joblib = "^1.4.2"
sentence-transformers = "^3.1.0"
jupyter = "^1.1.1"
qdrant-client = "^1.11.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
